--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -6,7 +6,7 @@ server {
     listen 80;
     # add  to server_name to run locally
     # localhost 127.0.0.1; #
-    server_name ifdfgjpy82.us-west-2.awsapprunner.com; # not sure what this should be in prod
+    server_name i5bnpvmeyc.us-west-2.awsapprunner.com; # not sure what this should be in prod
 
     access_log /dev/stdout;
     error_log /dev/stdout debug;
